@@ -1,3 +1,5 @@
+Build: 1.0.1-1.20.1 - TUE Aug 15 14:00:58 GMT 2023
+	Fixed a crash when disabling the supertools
 Build: 1.0.0-1.20.1 - SUN Aug 13 00:57:33 GMT 2023
 	Initial Update to 1.20.1
 	New Version naming scheme
